[package]
name = "tokio-line-multiplexed"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
log = "0.3.6"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = { git = "https://github.com/koivunej/tokio-proto", branch = "generic-requestid" }
tokio-service = "0.1"
bytes = "0.4"

[dev-dependencies]
service-fn = { git = "https://github.com/tokio-rs/service-fn" }
