[package]
name = "tokio-line-streaming"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

[dev-dependencies]
service-fn = { git = "https://github.com/tokio-rs/service-fn" }
